# tdosca-tc01-simplhw

./: README.md  compliance-traps.md
input-sources/: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  THANKS  change-release  configure.ac  prepClearRepCommit  prj.spec  reconf
input-sources/doc/: Makefile.am  simplhw.html  vsimplhw.html
input-sources/m4/: Makefile.am
input-sources/scripts/: Makefile.am  simplhw.sb  vsimplhw.sh
reference-compliance-artifacts/: bom.csv  donts.yaml  dos.yaml  oscf.md  prerequisites.csv
test-input-sources/: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  THANKS  change-release  configure.ac  prj.spec  reconf
test-input-sources/doc/: Makefile.am  vsimplhw.html
test-input-sources/m4/: Makefile.am
test-input-sources/scripts/: Makefile.am  vsimplhw.sb  vsimplhw.sh
test-reference-compliance-artifacts/: bom.csv  oscf.md
