# Copyright (C) 2020 Karsten Reincke / Deutsche Telekom AG <karsten.reincke@telekom.de>
#  
# The project SIMPLHW is distributed under the terms of the MIT license 
#  
# file <Makefile.am> version <#1.0.0#> of project <SIMPLHW>

EXTRA_DIST = AUTHORS ChangeLog COPYING NEWS reconf configure Makefile README.md THANKS change-release prepClearRepCommit prj.spec
SUBDIRS = m4 scripts doc

AUTOMAKE_OPTIONS = foreign
