# Copyright (C) 2020 Karsten Reincke / Deutsche Telekom AG <karsten.reincke@telekom.de>
#  
# The project VSIMPLHW is distributed under the terms of the MIT license 
#  
# file <Makefile.am> version <#0.1.0#> of project <VSIMPLHW>

EXTRA_DIST = reconf configure change-release prepClearRepCommit prj.spec
SUBDIRS = m4 scripts doc

AUTOMAKE_OPTIONS = foreign
