# Copyright (C) 2020 Karsten Reincke / Deutsche Telekom AG <karsten.reincke@telekom.de>
#  
# The project tdosca-tc01-simplhw is licensed under the terms of the MIT license
#  
# file <m4/Makefile.am> version <#1.0.0#> of project <SIMPLHW>

# Install m4 macros in this directory
m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros =

# The following is boilerplate
m4data_DATA = $(m4macros)
EXTRA_DIST = $(m4data_DATA)

