# Copyright (C) 2020 Karsten Reincke / Deutsche Telekom AG <karsten.reincke@telekom.de>
#
# The project SIMPLHW is licensed under the terms of the MIT license.
#
# file <scripts/Makefile.am> version <#1.0.0#> of project <SIMPLHW>


bin_SCRIPTS = simplhw.sh simplhw.sb
EXTRA_DIST = $(bin_SCRIPTS)

simplhw.sh:
	chmod ugo+x simplhw.sh
simplhw.sub:
	chmod ugo+x simplhw.sub
