# Copyright (C) 2020 Karsten Reincke / Deutsche Telekom AG <karsten.reincke@telekom.de>
#
# The project VSIMPLHW is licensed under the terms of the MIT license.
#
# file <scripts/Makefile.am> version <#0.1.0#> of project <VSIMPLHW>


bin_SCRIPTS = vsimplhw.sh vsimplhw.sb
EXTRA_DIST = $(bin_SCRIPTS)

vsimplhw.sh:
	chmod ugo+x vsimplhw.sh
vsimplhw.sub:
	chmod ugo+x vsimplhw.sub
